# Vital

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: branches.md  workflow.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
.vibe/: CONTEXT.md  config.toml
.vibe/agents/: vital-audit.toml  vital-review.toml  vital-tests.toml
.vibe/prompts/: vital-audit.md  vital-review.md  vital-tests.md  vital.md
.vibe/skills/: audit-python.md  memory-invariants.md  thryve-integration.md  update-docs.md  write-tests.md
backend/: blood_ocr.py  brain.py  burnout.py  coach.py  config.py  guardrail.py  health_server.py  memory.py  nudge.py  onboarding.py  onboarding_questions.py  seed_data.py  thryve.py  thryve_mcp.py  vocal_intake.py  voice_ws.py  voxtral.py
data/: AIHackxThryve_Data_Profiles_Data-Profile.csv
data/seeds/: generate_fake_blood_panel.py  pierre_onboarding.json
docs/: ARCHITECTURE.md  AUDIT.md  LATENCY_BUDGET.md  PRIVACY_REVIEW.md  TODO_PRIORITIZED.md  alan-precision-doc.md  apple-shortcut-setup.md  checklist-backend.md  checklist-designer.md  checklist-frontend.md  checklist-pitch.md  docs.json  health-metrics.md  introduction.mdx  pitch-stats.md  plan-hackathon.md  privacy-rgpd.md  ref-thryve-analytics.md  ref-thryve.md  resources.mdx  thryve-hackathon-guide.md
mobile/: App.tsx  app.json  index.web.ts  package-lock.json  package.json
scripts/: seed_health_data.py
tests/: conftest.py  test_berries.py  test_burnout.py  test_coach.py  test_health_server.py  test_health_store.py  test_memory.py  test_nudge.py  test_onboarding.py
vital/: brain.py  config.py  health_store.py  main.py  viz.py  voxtral.py
wiki/: index.md  log.md
(+38 files in other folders)
