[project]
name = "vital"
version = "0.1.0"
description = "Voice-Integrated Tracker & Adaptive Listener — voice health coach for burnout prevention"
requires-python = ">=3.12"
dependencies = [
    "mistralai[realtime]>=2.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "mcp[cli]>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "websockets>=16.0",
    "numpy>=2.0.0",
]

[project.scripts]
vital-server = "backend.health_server:main"
vital-nudge = "backend.nudge:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.15.8",
]
